# SCADA-Server-and-Client-Modbus-OPC-UA-Qt-QML-

./: README.md
qtonly_scada_client/: CMakeLists.txt  main.cpp  scadabackend.cpp  scadabackend.h
scada_client/: CMakeLists.txt  client_data.h  main.cpp  modbus_writer.cpp  modbus_writer.h  opcua_reader.cpp  opcua_reader.h  open62541.h  scada_viewmodel.cpp  scada_viewmodel.h
scada_client/qml/: Main.qml
scada_server/: scada_server.cpp
